--- a/principal.css
+++ b/principal.css
@@ -24,7 +24,7 @@ body {
     position: absolute;
     top: 20px;
     right: 20px;
-    height: 50px;
+    height: 120px;
   }
 
   .i-pty-text {
@@ -45,13 +45,14 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
   }
   
-  .button-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
-    padding-bottom: 80px;
-  }
+.button-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
   
   .button {
     background-color: #50a47a;
